// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integer expressions ABS 1`] = `
"
        (
            template_id (static_id 0 (\\"integer.test.ts\\" 44))
            storage ()
            storage_type (\\"nat\\")
            messages ((ep1 True False False True (\\"integer.test.ts\\" 47) ((set_type (params (\\"integer.test.ts\\" 47)) \\"int\\" (\\"integer.test.ts\\" 50)) (set (data) (abs (params (\\"integer.test.ts\\" 47)) (\\"integer.test.ts\\" 47)) (\\"integer.test.ts\\" 47)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"integer.test.ts\\" 44))
        )
        "
`;

exports[`Integer expressions ABS 2`] = `
"{
    \\"micheline\\": \\"parameter (int %ep1);\\\\nstorage   nat;\\\\ncode\\\\n  {\\\\n    CAR;\\\\n    ABS;\\\\n    NIL operation;\\\\n    PAIR;\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"nat\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"int\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"ABS\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TNat)\\\\n\\\\n  @sp.entry_point\\\\n  def ep1(self, params):\\\\n    sp.set_type(params, sp.TInt)\\\\n    self.data = abs(params)\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Integer expressions CastToInt 1`] = `
"
        (
            template_id (static_id 0 (\\"integer.test.ts\\" 35))
            storage ()
            storage_type (\\"int\\")
            messages ((ep1 True False False True (\\"integer.test.ts\\" 38) ((set_type (params (\\"integer.test.ts\\" 38)) \\"nat\\" (\\"integer.test.ts\\" 41)) (set (data) (toInt (params (\\"integer.test.ts\\" 38)) (\\"integer.test.ts\\" 38)) (\\"integer.test.ts\\" 38)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"integer.test.ts\\" 35))
        )
        "
`;

exports[`Integer expressions CastToInt 2`] = `
"{
    \\"micheline\\": \\"parameter (nat %ep1);\\\\nstorage   int;\\\\ncode\\\\n  {\\\\n    CAR;\\\\n    INT;\\\\n    NIL operation;\\\\n    PAIR;\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"int\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"nat\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"INT\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TInt)\\\\n\\\\n  @sp.entry_point\\\\n  def ep1(self, params):\\\\n    sp.set_type(params, sp.TNat)\\\\n    self.data = sp.to_int(params)\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Integer expressions CastToNat 1`] = `
"
        (
            template_id (static_id 0 (\\"integer.test.ts\\" 22))
            storage ()
            storage_type (\\"nat\\")
            messages ((ep1 True False False True (\\"integer.test.ts\\" 25) ((set_type (params (\\"integer.test.ts\\" 25)) \\"int\\" (\\"integer.test.ts\\" 32)) (set (data) (openVariant (isNat (params (\\"integer.test.ts\\" 25)) (\\"integer.test.ts\\" 27)) \\"Some\\" (literal (string \\"Could not convert int to nat\\") (\\"integer.test.ts\\" 27)) (\\"integer.test.ts\\" 27)) (\\"integer.test.ts\\" 27)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"integer.test.ts\\" 22))
        )
        "
`;

exports[`Integer expressions CastToNat 2`] = `
"{
    \\"micheline\\": \\"parameter (int %ep1);\\\\nstorage   nat;\\\\ncode\\\\n  {\\\\n    CAR;\\\\n    ISNAT;\\\\n    IF_NONE\\\\n      {\\\\n        PUSH string \\\\\\"Could not convert int to nat\\\\\\";\\\\n        FAILWITH;\\\\n      }\\\\n      {};\\\\n    NIL operation;\\\\n    PAIR;\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"nat\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"int\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"ISNAT\\"
                    },
                    {
                        \\"prim\\": \\"IF_NONE\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"string\\"
                                        },
                                        {
                                            \\"string\\": \\"Could not convert int to nat\\"
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"FAILWITH\\"
                                }
                            ],
                            []
                        ]
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TNat)\\\\n\\\\n  @sp.entry_point\\\\n  def ep1(self, params):\\\\n    sp.set_type(params, sp.TInt)\\\\n    self.data = sp.as_nat(params, message = 'Could not convert int to nat')\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Integer expressions IsNat 1`] = `
"
        (
            template_id (static_id 0 (\\"integer.test.ts\\" 9))
            storage ()
            storage_type (\\"nat\\")
            messages ((ep1 True False False True (\\"integer.test.ts\\" 12) ((set_type (params (\\"integer.test.ts\\" 12)) \\"int\\" (\\"integer.test.ts\\" 19)) (set (data) (openVariant (isNat (params (\\"integer.test.ts\\" 12)) (\\"integer.test.ts\\" 14)) \\"Some\\" (literal (string \\"Could not convert int to nat\\") (\\"integer.test.ts\\" 14)) (\\"integer.test.ts\\" 14)) (\\"integer.test.ts\\" 14)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"integer.test.ts\\" 9))
        )
        "
`;

exports[`Integer expressions IsNat 2`] = `
"{
    \\"micheline\\": \\"parameter (int %ep1);\\\\nstorage   nat;\\\\ncode\\\\n  {\\\\n    CAR;\\\\n    ISNAT;\\\\n    IF_NONE\\\\n      {\\\\n        PUSH string \\\\\\"Could not convert int to nat\\\\\\";\\\\n        FAILWITH;\\\\n      }\\\\n      {};\\\\n    NIL operation;\\\\n    PAIR;\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"nat\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"int\\",
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"ISNAT\\"
                    },
                    {
                        \\"prim\\": \\"IF_NONE\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"PUSH\\",
                                    \\"args\\": [
                                        {
                                            \\"prim\\": \\"string\\"
                                        },
                                        {
                                            \\"string\\": \\"Could not convert int to nat\\"
                                        }
                                    ]
                                },
                                {
                                    \\"prim\\": \\"FAILWITH\\"
                                }
                            ],
                            []
                        ]
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TNat)\\\\n\\\\n  @sp.entry_point\\\\n  def ep1(self, params):\\\\n    sp.set_type(params, sp.TInt)\\\\n    self.data = sp.as_nat(params, message = 'Could not convert int to nat')\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;
